# ChangeLog for dev-ruby/shoes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jul 2009; Hans de Graaff <graaff@gentoo.org> -shoes-0.1091.ebuild,
  shoes-0.1134.ebuild:
  Drop obsolete libpixman dependency. libpixman is now masked, and shoes
  does not depend directly on pixman, but indirectly through cairo.
  Remove old version.

  18 Dec 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  ChangeLog:
  Removed USE_RUBY variable.

  18 Dec 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  ChangeLog:
  Original ebuild submitted by Greg Fitzgerald. Bug #234985.

  18 Dec 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  ChangeLog:
  Initial ebuild for Shoes and Shoes 2. They don't work with ruby19 and Shoes
  2 has two QA issues.
