@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST shoes-0.1134.tar.gz 1402964 RMD160 e2a3c6bd25644e40c764372c1e19d1ba09e357f9 SHA1 4364c79b8eff06654cab91b6dc8a33dfc57a21bc SHA256 b18e3f5d16fc012a7b5f1b296e3148eb097d59989b7c412a35a3c31a190559e8
-EBUILD shoes-0.1134.ebuild 1101 RMD160 e450bef2a351797a793cec9ff2e556644fd2a6fe SHA1 bbd7b8bc6e65a50053576123dd42cc6bbd03de06 SHA256 436373a705acd91c349b188764c9b452fd9fb68bac3469cbe86343ba941bb9bf
-MISC ChangeLog 820 RMD160 3dad8c15d7d4e7fb2db53e7b29375832e86493c7 SHA1 a9fafc4b333e3b91e295cc3c57004a70ffbd5e2d SHA256 4b263617b322045fc0997d64a726bf263370a850674e611736d9652224dea05d
+EBUILD shoes-0.1134.ebuild 1094 RMD160 7fd938a33e07eb12b150fa8dbdf4cfc0b01fc506 SHA1 a18f6e525d97946cb519c55a52e2744ca9ec4dad SHA256 9fc7f1ca7497eb19d08386011c0fdcd746025b493be9887f87512f2926826578
+MISC ChangeLog 917 RMD160 1b1bbb6396eacca54a7bd65449d8fb4dd4f83179 SHA1 f2edd67cbd1d41598dc6496bf4a2fa83a59fc252 SHA256 0939776d0fa9c80ef85c43f2dc725655e52cfd06b252213015fd9ce1af9ebb07
 MISC metadata.xml 458 RMD160 e9c7e3760479b108139efb4e84183cfd538acbcb SHA1 a201363debb2773af961f14636f430b387d29a82 SHA256 e1d7563f06f0571a26133a543274f9f4c7763a386974cc4054d9e7358824ae1c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkppiW0ACgkQVYU2Ai8K93eclgCeK6GEq08vsUQQ6rCyRlpb7Kld
-lv4AnRhZloVn7gOsLVwFUrA3f8SRofY/
-=Mkrn
+iEYEARECAAYFAkuehNgACgkQ+tgfDpkAy6CoaQCfbGm9jjYB36C9+QVnjxxDVFEh
+1E0An2WmjGviglfVJp/8S7JewNbApuVl
+=Ptyb
 -----END PGP SIGNATURE-----
