@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/shoes
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  15 Mar 2010; Alex Legler <a3li@gentoo.org> shoes-0.1134.ebuild:
+  Fix SRC_URI, closes 308407.
 
   24 Jul 2009; Hans de Graaff <graaff@gentoo.org> -shoes-0.1091.ebuild,
   shoes-0.1134.ebuild:
